# app/Http/Requests/FindBookRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class StoreBookRequest extends FormRequest
+class FindBookRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,10 +24,12 @@ class StoreBookRequest extends FormRequest
     public function rules()
     {
         return [
+            'id' => 'required',
             'name' =>  'required',
             'category_id' =>  'required',
             'author_id' =>  'required',
             'description' =>  'required',
+            'cover' => 'required'
         ];
     }
 }
